--- a/views/_booking_management_customer.erb
+++ b/views/_booking_management_customer.erb
@@ -25,7 +25,7 @@
             </div>
             <div class="element_template">
               <div class="entity-field">
-                <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.customer_email %><span class="mandatoryfield">*</span></span>
+                <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.customer_email %></span>
                 <span class="entity-fieldvalue">
                     <input type="text" maxlength="40" size="35" name="customer_email" id="customer_email"
                       value="<%%=entity.customer_email%>"/>
