--- a/views/booking_management_new_reservation.js.erb
+++ b/views/booking_management_new_reservation.js.erb
@@ -351,12 +351,13 @@ bookingNewView = {
 
                     'customer_name': 'required',
                     'customer_surname' : 'required',
+
                     'customer_email' : {
-                        required: true,
+                    //    required: true,
                         email: true
                     },
                     'customer_phone': {
-                        required: true,
+                    //    required: true,
                         minlength: 9
                     }
                 },
