--- a/views/_booking_management_detail.erb
+++ b/views/_booking_management_detail.erb
@@ -7,8 +7,8 @@
     cursor: pointer;      
   }
 </style>
-                  <div class="bottom-margin" style="border:1px solid #EEE"> 
-                     <table class="table">
+                  <div class="bottom-margin" style="border:1px solid #EEE;padding-right: 20px;">
+                     <table class="table table-hover">
                         <thead class="table-header">
                           <tr>
                             <th class="table-cell left_text" scope="col" style="width:40%"><%=t.booking_management.form.booking_line.item%></th>
@@ -22,7 +22,7 @@
                         <tbody class="table-tbody">
                           <%% for (var lineIdx=0; lineIdx < entity.booking_lines.length; lineIdx++) { %>
                             <tr class="table-row">
-                               <td class="table-cell left_text"><%%=entity.booking_lines[lineIdx].item_id%> - <%%= entity.booking_lines[lineIdx].item_description %> <span class="booking-line-item-id ui-icon ui-icon-pencil edit-icon" data-id="<%%=entity.booking_lines[lineIdx].id%>" data-value="<%%=entity.booking_lines[lineIdx].item_id%>" data-value-price="<%%=new Number(entity.booking_lines[lineIdx].item_unit_cost).toFixed(2)%>"></span></td>
+                               <td class="table-cell left_text"><span style="display:none"><%%=entity.booking_lines[lineIdx].item_id%> - </span><%%= entity.booking_lines[lineIdx].item_description %> <span class="booking-line-item-id ui-icon ui-icon-pencil edit-icon" data-id="<%%=entity.booking_lines[lineIdx].id%>" data-value="<%%=entity.booking_lines[lineIdx].item_id%>" data-value-price="<%%=new Number(entity.booking_lines[lineIdx].item_unit_cost).toFixed(2)%>"></span></td>
                                <td class="table-cell right_text"><%%= entity.days %></td>                               
                                <td class="table-cell right_text"><%%= entity.booking_lines[lineIdx].quantity %> <span class="booking-line-quantity ui-icon ui-icon-pencil edit-icon" data-id="<%%=entity.booking_lines[lineIdx].id%>" data-value="<%%=entity.booking_lines[lineIdx].quantity%>"></span></td>
                                <td class="table-cell right_text"><%%if(entity.booking_lines[lineIdx].item_unit_cost != entity.booking_lines[lineIdx].item_unit_cost_base){%><span class="smaller_text less_constrast_text" style="text-decoration:line-through"><%%= new Number(entity.booking_lines[lineIdx].item_unit_cost_base).toFixed(2) %>&nbsp;</span><%%}%><%%= new Number(entity.booking_lines[lineIdx].item_unit_cost).toFixed(2) %> <span class="booking-line-unit-cost ui-icon ui-icon-pencil edit-icon" data-id="<%%=entity.booking_lines[lineIdx].id%>" data-value="<%%=new Number(entity.booking_lines[lineIdx].item_unit_cost).toFixed(2)%>" ></span></td>
@@ -137,7 +137,7 @@
                           </tr>
                           <%% } %>
 
-                           <tr class="table-row">
+                           <tr class="table-row success">
                                <td class="table-cell"><strong class="uppercase_text"><%= t.booking_management.form.total_cost %></strong></td>
                                <td class="table-cell"></td>
                                <td class="table-cell"></td>
