--- a/views/booking_planning_select.erb
+++ b/views/booking_planning_select.erb
@@ -1,90 +1,238 @@
-<div id="reservation_selector" class="container right-space">
-<div id="reservation_holder" class="right-space working_area">
-  <div class="grid_12">
-  	<% if @bookings.size == 1 %>
-      <div id="reservation_selected">
-  	    <h3 class="guiblock smaller_text uppercase_text" style="background-color: #DDD">Reserva seleccionada</h3>
-        <div class="guiblock">
-          <div><strong style="width: 80px; display:inline-block">Localizador:</strong> <%if @bookings.first.origin == 'booking'%>R <a href="/admin/booking/bookings/<%=@bookings.first.id%>"><%=@bookings.first.id%></a><%else%>PR <%=@bookings.first.id%><%end%></div>
-          <div><strong style="width: 80px; display:inline-block">Cliente:</strong> <%=@bookings.first.customer_name%> <%=@bookings.first.customer_surname%></div>
-          <div><strong style="width: 80px; display:inline-block">Fecha inicio:</strong> <b><%=@bookings.first.date_from.strftime('%d-%m-%Y')%> <%if @product_family.time_to_from%><%=@bookings.first.time_from%><%end%></b></div>
-          <div><strong style="width: 80px; display:inline-block">Fecha fin:</strong> <b><%=@bookings.first.date_to.strftime('%d-%m-%Y')%> <%if @product_family.time_to_from%><%=@bookings.first.time_to%><%end%></b></div>
-          <div><strong style="width: 80px; display:inline-block">Recurso:</strong> <%=@bookings.first.booking_item_category%> - <b><%=@bookings.first.booking_item_reference%></b></div>
-          <% if @bookings.first.origin == 'booking' %>
-            <% if @product_family.named_resources %>
-              <hr style="margin: 0.2em 0;"/>
-              <div><strong>Nombre:</strong> <%=@bookings.first.resource_1_name%></div>
-              <div><strong>Altura:</strong> <%=@bookings.first.customer_height%></div>
-              <div><strong>Peso:</strong> <%= @bookings.first.customer_weight%></div>    
-              <% if @bookings.first.pax == 2 %>
-                <div><strong>Nombre(2):</strong> <%=@bookings.first.resource_2_name%></div>
-                <div><strong>Altura(2):</strong> <%=@bookings.first.customer_2_height%></div>
-                <div><strong>Peso(2):</strong> <%= @bookings.first.customer_2_weight%></div>            
-              <% end %>   
-              <hr style="margin: 0.2em 0;"/>
-            <% end %>                    
-          <% end %>
-          <div><strong style="width: 80px; display:inline-block">Color:</strong></div>
-          <form name="color">
-            <input type="hidden" name="id" value="<%=@bookings.first.id%>"/>
-            <input type="hidden" name="type" value="<%=@bookings.first.origin%>"/>
-            <input type="color" name="planning_color" class="color" value="<%=@bookings.first.planning_color%>" style="width:95%; top-margin: 10px"/>
-          </form>
-          <div><strong style="width: 80px; display:inline-block">Comentarios:</strong> <%=@bookings.first.comments%></div>
-          <% if @bookings.first.origin == 'prereservation' %>
-            <button type="button" class="destroy_prereservation_button form-button red-button" style="margin: 5px auto; width: 100%" rel="<%=@bookings.first.id%>">Eliminar prereserva</button>   
-          <% end %>
+<div id="reservation_selector">
+  <% if @bookings.size == 1 %>
+  <div id="reservation_holder">
+    <div class="row">
+      <div class="col-lg-6">
+        <div class="block block-bordered block-themed">
+          <div class="block-header bg-primary-light">
+            <ul class="block-options">
+              <li>
+                <button id="cancel_resource_button" type="button"><i class="fa fa-close"></i></button>
+              </li>
+            </ul>
+            <h3 id="booking_title" class="block-title"><%if @bookings.first.origin == 'booking'%>Reserva<% elsif @bookings.first.origin == 'prereservation'%>Bloqueo de stock<%end%></h3>
+          </div>
+          <div class="block-content block-content-full">
+            <div class="row">
+              <div class="col-sm-6">
+                <div class="h4 push-5">
+                  <%if @bookings.first.origin == 'booking'%>
+                      #<a href="/admin/booking/bookings/<%=@bookings.first.id%>"><%=@bookings.first.id%></a>
+                  <%else%>
+                      #<%=@bookings.first.id%><%end%>
+                </div>
+                <div class="h5 push-5"><%=@bookings.first.customer_name%> <%=@bookings.first.customer_surname%></div>
+                <div class="h5 push-5">
+                  <% if @bookings.first.origin == 'booking' %><strong style="margin-right:26px">Entrega</strong><%else%><strong style="margin-right:10px">Inicio</strong><%end%>&nbsp;<%=@bookings.first.date_from.strftime('%d-%m-%Y')%> <%if @product_family.time_to_from%><%=@bookings.first.time_from%><%end%>
+                </div>
+                <div class="h5 push-5">
+                  <% if @bookings.first.origin == 'booking' %><strong style="margin-right:3px">Devolución</strong><%else%><strong style="margin-right:27px">Fin</strong><%end%>&nbsp;<%=@bookings.first.date_to.strftime('%d-%m-%Y')%> <%if @product_family.time_to_from%><%=@bookings.first.time_to%><%end%>
+                </div>
+              </div>
+              <div class="col-sm-6">
+                <div class="text-center">
+                  <div class="push-5">
+                    <form name="color" style="display: inline-block; position: relative; top: 3px">
+                      <input type="hidden" name="id" value="<%=@bookings.first.id%>"/>
+                      <input type="hidden" name="type" value="<%=@bookings.first.origin%>"/>
+                      <input type="color" name="planning_color" class="color" value="<%=@bookings.first.planning_color%>" style="width:32px; height: 32px"/>
+                    </form>
+                  </div>
+                  <div class="h5 font-w300 text-muted"><%=@bookings.first.booking_item_category ? @bookings.first.booking_item_category : @bookings.first.item_id%> -
+                                                       <b><%=@bookings.first.booking_item_reference ? @bookings.first.booking_item_reference : 'recurso no asignado' %></b></div>
+                </div>
+                <div>
+                  <% if @bookings.first.origin == 'prereservation' %>
+                      <br>
+                      <div class="text-center">
+                        <button type="button" class="destroy_prereservation_button btn btn-sm btn-danger" rel="<%=@bookings.first.id%>">Eliminar bloqueo de stock</button>
+                      </div>
+                  <% end %>
+                  <% if @bookings.first.origin == 'booking' %>
+                      <% if @product_family.named_resources %>
+                          <br>
+                          <ul>
+                            <% if @bookings.first.resource_1_name %>
+                            <li>
+                              <%=@bookings.first.resource_1_name%>
+                              <small>
+                                <% if @product_family.height and
+                                    !@bookings.first.customer_height.nil? and
+                                    !@bookings.first.customer_height.empty? %>
+                                    <%=@bookings.first.customer_height%> cm.
+                                <% end %>
+                                <% if @product_family.weight and
+                                    !@bookings.first.customer_weight.nil? and
+                                    !@bookings.first.customer_weight.empty? %>
+                                    <%= @bookings.first.customer_weight%> kg.
+                                <%end %>
+                              </small>
+                            </li>
+                            <% end %>
+                            <% if @bookings.first.pax == 2 %>
+                                <% if @bookings.first.resource_2_name %>
+                                <li>
+                                  <%=@bookings.first.resource_2_name%>
+                                  <small>
+                                    <% if @product_family.height and
+                                        !@bookings.first.customer_2_height.nil? and
+                                        !@bookings.first.customer_2_height.empty? %>
+                                        <%=@bookings.first.customer_2_height%> cm.
+                                    <% end %>
+                                    <% if @product_family.weight
+                                         !@bookings.first.customer_2_weight.nil? and
+                                             !@bookings.first.customer_2_weight.empty? %>
+                                        <%= @bookings.first.customer_2_weight%> kg.
+                                    <%end %>
+                                  </small>
+                                </li>
+                                <% end %>
+                            <%end%>
+                          </ul>
+                      <% end %>
+                  <% end %>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    <% else %>
-      <h3 class="guiblock smaller_text uppercase_text" style="background-color: #DDD">Seleccionar reserva</h3>
-      <form name="select_booking">
-      <% @bookings.each do |booking| %>
-        <div class="guiblock bottom-margin">
-          <div><input type="radio" name="id" value="<%=booking.id2%>"
-                                             rel="<%=booking.origin%>"
-                                             data-category-code="<%=booking.booking_item_category%>"
-                                             data-date-from="<%=booking.date_from.strftime('%Y-%m-%d')%>"
-                                             data-date-to="<%=booking.date_to.strftime('%Y-%m-%d')%>"
-                                             data-planning-color="<%=booking.planning_color%>"></input><strong style="width: 80px; display:inline-block">Localizador:</strong> <%if booking.origin == 'booking'%>R <a href="/admin/booking/bookings/<%=booking.id%>"><%=booking.id%></a><%else%>PR <%=booking.id%><%end%></div>
-          <div><strong style="width: 80px; display:inline-block">Cliente:</strong> <%=booking.customer_name%> <%=booking.customer_surname%></div>
-          <div><strong style="width: 80px; display:inline-block">Fecha inicio:</strong> <b><%=booking.date_from.strftime('%d-%m-%Y')%> <%if @product_family.time_to_from%><%=booking.time_from%><%end%></b></div>
-          <div><strong style="width: 80px; display:inline-block">Fecha fin:</strong> <b><%=booking.date_to.strftime('%d-%m-%Y')%> <%if @product_family.time_to_from%><%=booking.time_to%><%end%></b></div>
-          <div><strong style="width: 80px; display:inline-block">Recurso:</strong> <%=booking.booking_item_category%> - <b><%=booking.booking_item_reference%></b></div>      
-          <% if booking.origin == 'booking' %>
-            <% if @product_family.named_resources %>
-              <hr style="margin: 0.2em 0;"/>
-              <div><strong>Nombre:</strong> <%=booking.resource_1_name%></div>
-              <div><strong>Altura:</strong> <%=booking.customer_height%></div>
-              <div><strong>Peso:</strong> <%= booking.customer_weight%></div>    
-              <% if @bookings.first.pax == 2 %>
-                <div><strong>Nombre(2):</strong> <%=booking.resource_2_name%></div>
-                <div><strong>Altura(2):</strong> <%=booking.customer_2_height%></div>
-                <div><strong>Peso(2):</strong> <%= booking.customer_2_weight%></div>       
-              <% end %>   
-              <hr style="margin: 0.2em 0;"/>
-            <% end %>  
-          <% end %>
-          <div><strong style="width: 80px; display:inline-block">Comentarios:</strong> <%=booking.comments%></div>          
-          <% if booking.origin == 'prereservation' %>
-            <button type="button" class="destroy_prereservation_button form-button red-button" style="margin: 5px auto; width: 100%" rel="<%=booking.id%>">Eliminar prereserva</button>
-          <% end %>          
-        </div>      
-      <% end %>
-      </form>
-      <% @bookings.each do |booking| %>
-          <h4 class="smaller_text">Colores</h4>
-          <div><strong style="width: 80px; display:inline-block">Localizador:</strong> <%if booking.origin == 'booking'%>R <%=booking.id%><%else%>PR <%=booking.id%><%end%></div>
-          <form name="color">
-            <input type="hidden" name="id" value="<%=booking.id%>"/>
-            <input type="hidden" name="type" value="<%=booking.origin%>"/>
-            <input type="color" name="planning_color" class="color" value="<%=booking.planning_color%>" style="width:95%; top-margin: 10px"/>
-          </form>         
-      <% end %>
-    <% end %>
+      <div class="col-lg-6">
+        <div class="block block-bordered block-themed">
+          <div class="block-header bg-flat">
+            <h3 class="block-title"><% if @bookings.first.booking_item_reference %>Reasignación<%else%>Asignación<%end%></h3>
+          </div>
+          <div class="block-content bg-gray-lighter">
+            <div class="row items-push text-center">
+              <div class="col-xs-4">
+                <div id="available_resources" class="h1 font-w700"></div>
+                <div class="h5 text-muted text-uppercase push-5-t">Disponibles</div>
+              </div>
+              <div class="col-xs-8">
+                <div class="alert alert-info alert-dismissable">
+                  <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                  <% if @bookings.first.booking_item_reference %>
+                      <p>Puede <strong>reasignar</strong> el recurso haciendo click sobre cualquier celda de la fila.</p>
+                  <% else %>
+                      <p>Puede <strong>asignar</strong> el recurso haciendo click sobre cualquier celda de la fila.</p>
+                  <% end %>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
-<div>
-  <%= partial :booking_planning_reassign_form, locals: {booking: @bookings.first} %>
-</div>
+  <% end %>
+
+  <!-- ===================================== -->
+  <!-- Reassign resource modal               -->
+  <!-- ===================================== -->
+  <div class="modal fade" id="reassign_resource_container" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <ul class="block-options">
+            <li>
+              <button data-dismiss="modal" type="button"><i class="si si-close"></i></button>
+            </li>
+          </ul>
+          <% if @bookings.first.booking_item_reference %>
+          <h3 class="modal-title">Reasignar recurso</h3>
+          <% else %>
+          <h3 class="modal-title">Asignar recurso</h3>
+          <% end %>
+        </div>
+        <div class="modal-body">
+          <%= partial :booking_planning_reassign_form, locals: {booking: @bookings.first} %>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- ===================================== -->
+  <!-- Show available resources modal         -->
+  <!-- ===================================== -->
+  <div class="modal fade" id="show_available_resources_container" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <ul class="block-options">
+            <li>
+              <button data-dismiss="modal" type="button"><i class="si si-close"></i></button>
+            </li>
+          </ul>
+          <h3 class="modal-title">Recursos disponibles</h3>
+        </div>
+        <div class="modal-body">
+          <div id="select_resource_detail"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <% if @bookings.size > 1 %>
+
+    <!-- ===================================== -->
+    <!-- Select reservation                    -->
+    <!-- ===================================== -->
+    <div class="modal fade" id="select_resource_container" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content" style="min-width: 880px">
+          <div class="modal-header">
+             <ul class="block-options">
+              <li>
+                <button data-dismiss="modal" type="button"><i class="si si-close"></i></button>
+              </li>
+            </ul>
+            <h3 class="modal-title">Seleccionar reserva</h3>
+          </div>
+          <div class="modal-body">
+            <form name="select_booking" style="overflow: visible">
+              <table class="table table-striped" style="table-layout: fixed">
+                <thead>
+                  <tr>
+                    <th style="width:30px"></th>
+                    <th style="width:100px">Tipo</th>
+                    <th style="width:100px">#</th>
+                    <th style="width:150px">Cliente</th>
+                    <th style="width:100px">Inicio</th>
+                    <th style="width:100px">Fin</th>
+                    <th style="width:100px">Recurso</th>
+                    <th style="width:150px">Comentarios</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <% @bookings.each do |booking| %>
+                  <tr>
+                    <td>
+                      <input type="radio" name="id" value="<%=booking.id2%>"
+                             rel="<%=booking.origin%>"
+                             data-category-code="<%=booking.booking_item_category%>"
+                             data-date-from="<%=booking.date_from.strftime('%Y-%m-%d')%>"
+                             data-date-to="<%=booking.date_to.strftime('%Y-%m-%d')%>"
+                             data-planning-color="<%=booking.planning_color%>"</input>
+                    </td>
+                    <td><%if booking.origin == 'booking'%>Reserva<%else%>Bloqueo de stock<%end%></td>
+                    <td><%if booking.origin == 'booking'%><a href="/admin/booking/bookings/<%=booking.id%>"><%=booking.id%></a><%else%><%=booking.id%><%end%></td>
+                    <td><%=booking.customer_name%> <%=booking.customer_surname%></td>
+                    <td><%=booking.date_from.strftime('%d-%m-%Y')%> <%if @product_family.time_to_from%><%=booking.time_from%><%end%></td>
+                    <td><%=booking.date_to.strftime('%d-%m-%Y')%> <%if @product_family.time_to_from%><%=booking.time_to%><%end%></td>
+                    <td>
+                      <%=booking.booking_item_category%> - <%=booking.booking_item_reference%>
+                    </td>
+                    <td><%=booking.comments%></td>
+                  </tr>
+                  <% end %>
+                </tbody>
+              </table>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  <% end %>
+
 </div>
