--- a/views/bookings_planning_v2.js.erb
+++ b/views/bookings_planning_v2.js.erb
@@ -12,12 +12,10 @@ require(['jquery', 'jquery.ui', 'jquery.ui.datepicker-es',
     product: null,
 
     init: function() {
-      <% if @date_from and @date_to %>
+      <% if @date_from %>
       this.dateFrom = new Date('<%=@date_from.strftime("%Y-%m-%d")%>');
-      this.dateTo = new Date('<%=@date_to.strftime("%Y-%m-%d")%>');
       <% else %>
       this.dateFrom = new Date(this.year, this.month-1, 1);
-      this.dateTo = new Date(this.year, this.month, 0);
       <% end %>
       <% if @mode == :stock and @reference %>
       this.reference = <%=@reference%>;
@@ -35,7 +33,6 @@ require(['jquery', 'jquery.ui', 'jquery.ui.datepicker-es',
  
     init: function() {
       bookingPlanningModel.dateFrom = planningModel.dateFrom;
-      bookingPlanningModel.dateTo = planningModel.dateTo;
       bookingPlanningModel.reference = planningModel.reference;
       bookingPlanningModel.product = planningModel.product;
   	  bookingPlanningView.init();
