--- a/views/monthly_occupation.erb
+++ b/views/monthly_occupation.erb
@@ -29,13 +29,13 @@
 	</div>
 </div>
 <div class="admin_content_wrapper">
-  <div>
-    <table id="occupation_table" class="table">
+  <div style="overflow: auto; max-height: 500px">
+    <table id="monthly_occupation_table" class="table table-striped table-responsive" style="table-layout: fixed; margin: 0">
       <thead class="table-header">
         <tr>
-          <th class="table-cell" scope="col" style="width: 50px"></th>
+          <th class="table-cell" scope="col" style="width: 150px"></th>
           <% (1..@days).each do |day| %>
-          <th class="table-cell centered_text" scope="col"><%=day%></th>
+          <th class="table-cell centered_text" scope="col" style="width: 70px"><%=day%></th>
           <% end %>     
         </tr>
       </thead>
