--- a/views/translate_booking_category.js.erb
+++ b/views/translate_booking_category.js.erb
@@ -114,7 +114,7 @@ require(['jquery','ysdhtmleditor','ysdtemplate','YSDGui',
 
             setupForm: function() {
 
-                htmlEditor('.texteditor'); // HTML editor
+                htmlEditor('form[name=booking_category_translation] .texteditor'); // HTML editor
 
                 var selector = new SelectSelector('language', this.dataSource,
                     bookingCategoryTranslationModel.language);
