--- a/views/translate_booking_extra.erb
+++ b/views/translate_booking_extra.erb
@@ -2,11 +2,7 @@
   <h2 class="entity-title">Traducir extra</h2>
 </div>
 <div id="page_wrapper" class="all-space">
-  <div class="container_12">
-    <div class="grid_8">
-      <div id="booking_extra">
-      </div>
-    </div>
+  <div id="booking_extra">
   </div>
 </div>
 
@@ -14,40 +10,41 @@
 
 <script type="text/tmpl" id="booking_extra_translation_template_form">
 
-  <form name="booking_extra_translation" id="booking_extra_translation">
+  <form name="booking_extra_translation" class="form-horizontal" id="booking_extra_translation">
 
-   <input type="hidden" name="extra_id" value="<%%=extraId%>"/>
-   <input type="hidden" name="language" value="<%%=language%>"/>
+    <input type="hidden" name="extra_id" value="<%%=extraId%>"/>
+    <input type="hidden" name="language" value="<%%=language%>"/>
 
-    <div class="form-fields">
-
-      <div class="formrow">
-        <label for="language" class="fieldtitle">Idioma <span class="mandatoryfield">*</span></label>
+    <div class="form-group">
+      <label for="language" class="col-md-3 control-label">Idioma <span class="mandatoryfield">*</span></label>
+      <div class="col-md-8">
         <select name="language" id="language" class="fieldcontrol"/>
       </div>
-
-      <div class="formrow">
-         <label for="name" class="fieldtitle">Nombre</label>
-         <input type="text" id="name" name="name" class="fieldcontrol" maxlength="80"
-            <%% if (entity) { %> value="<%%= entity.name %>" <%% } %>/>
-      </div>
-
-      <div class="formrow">
-        <label for="description" class="fieldtitle">Descripción</label>
-        <textarea rows="5" id="description" name="description" class="fieldcontrol texteditor">
-           <%% if (entity) {%><%%=entity.description %><%% } %>
-        </textarea>
-      </div>
-
     </div>
 
-    <div class="bottom-navigation-bar navigation-bar">
-      <div class="navigation-bar-crud-buttons">
+    <div class="form-group">
+      <label for="name" class="col-md-3 control-label">Nombre</label>
+      <div class="col-md-9">
+        <input type="text" id="name" name="name" class="fieldcontrol" maxlength="80"
+          <%% if (entity) { %> value="<%%= entity.name %>" <%% } %>/>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label for="description" class="col-md-3 control-label">Descripción</label>
+      <div class="col-md-9">
+        <textarea rows="5" id="description" name="description" class="fieldcontrol texteditor"><%% if (entity) {%><%%=entity.description %><%% } %></textarea>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <div class="col-md-9 col-md-offset-3">
          <input id="update_button" type="button"
-                class="update-entity-button action-button entity-management-button"
+                class="btn btn-sm btn-primary update-entity-button action-button entity-management-button"
                 value="<%=t.entitymanagement.update%>"/>
       </div>
     </div>
+
   </form>
 
 </script>
